2011-11-13  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * configure.in: Bumped version to 0.1.20

2011-11-08  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob : Taken into account the aspect ratio when calculating
        the auto fit scale ratio.

2011-10-30  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob, giv-widget.gob : Added support for pixel grid.

2011-10-29  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob : On auto-reload make image read failures silently ignored.

        * giv-win.gob : Fixed bug that overlay was exported even if mark view was off.

2011-09-25  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * GivRenderer.gob : Temporary fix for clipping error.

        * giv-win.gob, giv-parser.gob : Added tool for counting marks in rectangle.

        * giv-win.gob : Fixed bug that he -join flag wasn't functioning.

2011-09-13  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * Added option to turn off autocontrast on image load.

2011-09-06  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * plugins/fits.c : Fixed bug in the reading of multi slice fits files.

2011-08-03  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * GivRenderer.cc, giv-data.h, giv-parser.cc : Got
        rid of the union used for text annotation.

2011-06-30  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * plugins/SConstruct: Fixed compilation under windows for
        Fedora 15 cross compilation.

        * giv-parser.cc: Changed logic to finish end of input if
        no \n or \r was found at the end of the line.

2011-04-28  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * configure.in : Bumped version to 0.9.19 .

        * plugins/tiff.c : Added support for 1bps files. (First page only).

        * giv-calibrate-dialog.gob : Made the text field change when
        switching between different reference units.

        * giv-win.gob : Made mouse release stop measuring. Was a second
        click.
