@@ -213,7 +213,8 @@ void draw_to_cairo(cairo_t *cr,
                    GivWin *self);
 bool is_file_ext(const char *fn,
                  const char* ext_match);
-gboolean cb_load_image_when_idle(gpointer user_data);
+static gboolean cb_load_image_when_idle(gpointer user_data);
+static gboolean cb_redraw_when_idle(gpointer user_data);
 static void
 cb_contrast_changed(GtkWidget* widget,
                     double contrast_min,
@@ -3789,13 +3790,21 @@ bool is_file_ext(const char *filename,
     return res;
 }
 
-gboolean
+static gboolean
 cb_load_image_when_idle(gpointer user_data)
 {
     GivWin *self = (GivWin *)user_data;
     giv_win_set_current_file(self, selfp->idle_index);
     selfp->idle_handle = -1;
 
+    return false;
+}
+
+static gboolean
+cb_redraw_when_idle(gpointer user_data)
+{
+    GivWin *self = (GivWin *)user_data;
+    giv_win_redraw(self);
     return false;
 }
 
@@ -4141,6 +4150,32 @@ static int cmd_load_file(GLibJsonRpcServer *server,
   return 0;
 }
 
+static int cmd_giv_string(GLibJsonRpcServer *server,
+                          const char *method,
+                          JsonNode *params,
+                          JsonNode **response,
+                          gpointer user_data)
+{
+  GivWin *self = (GivWin*)user_data;
+  *response = json_node_new(JSON_NODE_VALUE);
+  JsonReader *reader = json_reader_new(params);
+  
+  // Assume array at the moment
+  json_reader_read_element(reader, 0);
+  const char *giv_string = json_reader_get_string_value(reader);
+
+  // Erase the old giv string
+  // TBD, make this configurable?
+  giv_widget_clear_giv(GIV_WIDGET(selfp->w_imgv));
+  giv_widget_add_giv_from_string(GIV_WIDGET(selfp->w_imgv), giv_string);
+
+  g_object_unref(reader);
+  json_node_set_string(*response, "Ok");
+  g_idle_add(cb_redraw_when_idle, self);
+  
+  return 0;
+}
+
 // Define remote commands
 static void create_remote_commands(GivWin *self)
 {
@@ -4151,6 +4186,10 @@ static void create_remote_commands(GivWin *self)
   glib_jsonrpc_server_register_command(selfp->jsonrpc_server,
                                        "load_file",
                                        cmd_load_file,
+                                       self);
+  glib_jsonrpc_server_register_command(selfp->jsonrpc_server,
+                                       "giv_string",
+                                       cmd_giv_string,
                                        self);
 }
 
